--- a/style/visual.less
+++ b/style/visual.less
@@ -1,9 +1,6 @@
-p {
-    font-size: 20px;
-    font-weight: bold;
-    em {
-        background: yellow;
-        padding: 5px;
-        
-    }
+.value-run {
+    border: none;
+    padding: 0;
+    margin: 0;
+    stroke: none;
 }
