Update the value-run rendering so that it uses a CSS class for static props. Update the scrub to dynamically infer where the category column is

--- a/style/visual.scss
+++ b/style/visual.scss
@@ -1,6 +1,7 @@
 .value-run {
-    border: none;
-    padding: 0;
-    margin: 0;
-    stroke: none;
+	border: none;
+	padding: 0;
+	margin: 0;
+	stroke: none;
+	shape-rendering: crispEdges;
 }
