Visual Fixes * Add start/end to value slice datum * Update the value text to be font-size 10 by default instead of max-available * Use a monospace font for values * Right-align values * Update the chart to not overlay text on pan

--- a/packages/powerbi-heat-streams/style/visual.scss
+++ b/packages/powerbi-heat-streams/style/visual.scss
@@ -3,11 +3,20 @@
 	padding: 0;
 	margin: 0;
 	stroke: none;
-	shape-rendering: crispEdges;
+  shape-rendering: crispEdges;
+  clip-path: url("#clip-chart")
 }
 
 .value-text {
+  width: '100%';
   stroke: none;
+  font-family: "Lucida Console", Monaco, monospace;
+  text-align: right;
+  text-anchor: end;
+}
+
+.category-charts {
+  clip-path: url("#clip-chart")
 }
 
 .category-view {
